Updated marketing selling points minimun height

--- a/src/styles/site/home-page.less
+++ b/src/styles/site/home-page.less
@@ -115,8 +115,10 @@
       .framed {
         border: 1px solid @middleGrey;
         padding: 15px 25px 45px;
-        min-height: 370px;
         width: 280px;
+      }
+      .market-selling-points {
+        min-height: 350px;
       }
       .market-icon {
         display: block;
