--- a/src/styles/site/home-page.less
+++ b/src/styles/site/home-page.less
@@ -8,6 +8,12 @@
 
 
 .home-page {
+  p {
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+    line-height: 1.25;
+  }
+
   .section-header {
     text-align: center;
   }
