Added "Régions disponibles" page

--- a/src/styles/megapode.less
+++ b/src/styles/megapode.less
@@ -100,7 +100,8 @@ input[type=tel] {
   .dropShadow();
 
   &.huge {
-    padding: 8px 25px 18px;
+    display: inline-block;
+    padding: 8px 25px 14px;
     font-weight: @fwLight;
     font-size: 16pt;
 
