--- a/src/styles/site/home-page.less
+++ b/src/styles/site/home-page.less
@@ -148,7 +148,7 @@
       }
     }
     .discover-cta {
-      padding: 15px;
+      padding: 0px 15px 15px 15px;
       font-size: 10pt;
       &:after {
         margin-left: 29px;
