Added links in footer

--- a/src/scripts/components/footer/footer-template.html
+++ b/src/scripts/components/footer/footer-template.html
@@ -9,7 +9,7 @@
       </div>
       <div class="footer-column">
         <div class="list-header">
-          <a class="footer-link" href="#">
+          <a class="footer-link" href="/comment-utiliser-megapode">
             Comment<br>
             utiliser<br>
             Megapode
@@ -18,26 +18,26 @@
       </div>
       <div class="footer-column">
         <div class="list-header">
-          <a class="footer-link" href="#">Régions disponibles</a>
+          <a class="footer-link" href="/regions-disponibles">Régions disponibles</a>
         </div>
       </div>
     </div>
 
     <div class="footer-row">
       <div class="footer-column">
-        <div class="list-header">Bonjour</div>
+        <div class="list-header"><a class="footer-link" href="/bonjour">Bonjour</a></div>
         <ul class="list">
           <li>
-            <a class="footer-link" href="#">Notre mission</a>
+            <a class="footer-link" href="/bonjour#mission">Notre mission</a>
           </li>
           <li>
-            <a class="footer-link" href="#">Notre histoire</a>
+            <a class="footer-link" href="/bonjour#histoire">Notre histoire</a>
           </li>
           <li>
-            <a class="footer-link" href="#">Nos leaders</a>
+            <a class="footer-link" href="/bonjour#leaders">Nos leaders</a>
           </li>
           <li>
-            <a class="footer-link" href="#">Nos partenaires</a>
+            <a class="footer-link" href="/bonjour#partenaires">Nos partenaires</a>
           </li>
         </ul>
       </div>
