Added links in the header

--- a/src/scripts/components/header/header-template.html
+++ b/src/scripts/components/header/header-template.html
@@ -17,9 +17,9 @@
     </nav>
 
     <nav id="mainNav" class="header-nav main-nav">
-      <a class="link" href="#">Comment utiliser Megapode</a>
+      <a class="link" href="/comment-utiliser-megapode">Comment utiliser Megapode</a>
       <span class="link-separator">•</span>
-      <a class="link" href="#">Régions disponibles</a>
+      <a class="link" href="/regions-disponibles">Régions disponibles</a>
     </nav>
 
   </div>
