Added menu and veil

--- a/src/scripts/components/header/header-template.html
+++ b/src/scripts/components/header/header-template.html
@@ -10,7 +10,7 @@
         </a>
       </div>
       <div class="button-wrapper">
-        <button type="button" class="button">
+        <button type="button" class="button" ng-click="vm.requestMenu()">
           <span class="button-label menu">Menu</span>
         </button>
       </div>
