--- a/src/styles/common/components.less
+++ b/src/styles/common/components.less
@@ -1,5 +1,7 @@
 @import "../../scripts/components/logo/logo";
 @import "../../scripts/components/download-cta/download-cta";
+@import "../../scripts/components/menu/menu";
+@import "../../scripts/components/veil/veil";
 
 @import "../../scripts/components/header/header";
 @import "../../scripts/components/footer/footer";
