--- a/www/wp-content/themes/megapode-website-w17/static/styles/home-page.css
+++ b/www/wp-content/themes/megapode-website-w17/static/styles/home-page.css
@@ -171,6 +171,47 @@ input[type=tel] {
 .download-cta .devices-icons.light {
   background-image: url('/wp-content/themes/megapode-website-w17/static/images/download-cta-devices-light.png');
 }
+.main-menu {
+  position: fixed;
+  top: 0;
+  right: -430px;
+  z-index: 1;
+  width: 430px;
+  min-height: 100%;
+  background-color: #fafafa;
+  text-align: center;
+}
+.main-menu .logo-container {
+  display: inline-block;
+  padding: 45px 0;
+}
+.main-menu .main-menu-nav {
+  padding: 30px 0 20px;
+}
+.main-menu .main-menu-item {
+  display: block;
+  width: 100%;
+  padding: 10px 0 25px;
+  font-size: 16pt;
+  font-weight: 300;
+  line-height: 1;
+  color: #262322;
+  text-decoration: none;
+}
+.main-menu .main-menu-item:hover {
+  text-decoration: underline;
+}
+.veil {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  background-color: #262322;
+  opacity: 0;
+  display: none;
+}
 .page-header {
   position: relative;
   height: 156px;
