Added link to home page on head logo

--- a/src/scripts/components/header/header-template.html
+++ b/src/scripts/components/header/header-template.html
@@ -1,7 +1,9 @@
 <header class="page-header">
   <div class="centered-content">
 
-    <mp-logo></mp-logo>
+    <a href="/" class="logo-button">
+      <mp-logo></mp-logo>
+    </a>
 
     <nav id="utilNav" class="header-nav util-nav">
       <div class="button-wrapper">
