--- a/src/scripts/components/header/header.less
+++ b/src/scripts/components/header/header.less
@@ -3,7 +3,7 @@
   position: relative;
   height: 156px;
 
-  mp-logo {
+  .logo-button {
     display: inline-block;
     position: relative;
     margin-top: 45px;
