--- a/src/styles/megapode.less
+++ b/src/styles/megapode.less
@@ -99,6 +99,23 @@ input[type=tel] {
   .buttonGradient();
   .dropShadow();
 
+  &.medium {
+    display: inline-block;
+    padding: 0px 15px 15px 15px;
+    font-weight: @fwLight;
+    font-size: 10pt;
+
+    &:after {
+      position: relative;
+      top: 10px;
+      margin-left: 15px;
+      content: url('@{imagesDir}/huge-button-arrow.png');
+      background-size: 18px 30px;
+      width: 18px;
+      height: 30px;
+    }
+  }
+
   &.huge {
     display: inline-block;
     padding: 8px 25px 14px;
