Added animated floating plan in home banner (#17)

--- a/src/scripts/pages/home/banner/home-banner.less
+++ b/src/scripts/pages/home/banner/home-banner.less
@@ -9,9 +9,35 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    background-image: url('@{imagesDir}/home-banner-ipad.png');
+    background-image: url('@{imagesDir}/home-banner-ipad.jpg');
     background-repeat: no-repeat;
     background-position: center; 
+  }
+
+  .hovering-plan {
+    position: relative;
+    top: 120px;
+    left: 50%;
+    z-index: 1;
+    width: 691px;
+    height: 306px;
+    margin-left: -345px;
+    background-image: url('@{imagesDir}/home-banner-plan.png');
+    background-repeat: no-repeat;
+    background-position: center; 
+  }
+
+  .hovering-plan-shadow {
+    position: relative;
+    top: -200px;
+    left: 50%;
+    z-index: 0;
+    width: 817px;
+    height: 451px;
+    margin-left: -408px;
+    background-image: url('@{imagesDir}/home-banner-plan-shadow.png');
+    background-repeat: no-repeat;
+    background-position: center;
   }
 
   .download-cta-container {
