--- a/src/styles/common/variables.less
+++ b/src/styles/common/variables.less
@@ -5,6 +5,8 @@
 @yellow: #ffce00;
 @topYellow: #ffb711;
 @bottomYellow: #ffae00;
+@errorBGColor: #ffd6d6;
+@errorColor: #c70000;
 
 @ffSansSerif: 'Roboto', sans-serif;
 @ffSerif: 'Libre Baskerville', serif;
