--- a/src/scripts/components/download-cta/download-cta.less
+++ b/src/scripts/components/download-cta/download-cta.less
@@ -1,36 +1,11 @@
 .download-cta {
   position: relative;
 
-  .download-button {
-    display: inline-block;
-    padding: 9px 10px 12px 10px;
-    border: 0;
-    background-color: #287ff5;
-    font-family: @ffSansSerif;
-    font-size: 12pt;
-    font-weight: @fwBold;
-    text-decoration: none;
-    line-height: 1;
-    letter-spacing: 0.25pt;
-    color: @white;
-
-    .apple-icon {
-      position: relative;
-      display: inline-block;
-      top: 2px;
-      margin-left: 6px;
-      width: 15px;
-      height: 18px;
-      background-image: url('@{imagesDir}/apple-logo.png');
-      background-repeat: no-repeat;
-    }
-  }
-
   .devices-icons {
-    position: absolute;
-    top: -1px;
-    left: 158px;
-    width: 72px;
+    display: inline-block;
+    position: relative;
+    vertical-align: top;
+    width: 62px;
     height: 42px;
 
     // TODO: investigate what to do fo @2x
@@ -39,6 +14,47 @@
     }
     &.light {
       background-image: url('@{imagesDir}/download-cta-devices-light.png');
+    }
+  }
+
+  .download-label {
+    display: inline-block;
+    position: relative;
+    top: -4px;
+    margin: 0 5px 0 15px;
+    font-family: @ffSansSerif;
+    font-size: 12pt;
+    font-weight: @fwBold;
+    text-decoration: none;
+    line-height: 1;
+    letter-spacing: 0.25pt;
+
+    &.dark {
+      color: @black;
+    }
+    &.light {
+      color: @white;
+    }
+  }
+
+  .download-button {
+    display: inline-block;
+    position: relative;
+    margin: 1px 0;
+    width: 17px;
+    height: 20px;
+    padding: 10px 20px;
+    border: 0;
+    background-color: #287ff5;
+
+    svg {
+      width: 17px;
+      height: 20px;
+      fill: @white;
+    }
+
+    &.android {
+      margin-left: -2px;
     }
   }
 }
