Updated labels/links to "Nos forfaits" (#19)

--- a/src/scripts/components/footer/footer-template.html
+++ b/src/scripts/components/footer/footer-template.html
@@ -42,7 +42,7 @@
         </ul>
       </div>
       <div class="footer-column">
-        <div class="list-header">Nos marchés</div>
+        <div class="list-header">Nos forfaits</div>
         <ul class="list">
           <li>
             <a class="footer-link" href="#">Courtiers</a>
