--- a/src/scripts/components/menu/menu-template.html
+++ b/src/scripts/components/menu/menu-template.html
@@ -8,7 +8,7 @@
     <a class="main-menu-item" href="/bonjour">Bonjour</a>
     <a class="main-menu-item" href="/comment-utiliser-megapode">Comment utiliser Megapode</a>
     <a class="main-menu-item" href="/regions-disponibles">Régions disponibles</a>
-    <a class="main-menu-item" href="#">Nos marchés</a>
+    <a class="main-menu-item" href="#">Nos forfaits</a>
     <a class="main-menu-item" href="#">Corporatif</a>
     <a class="main-menu-item" href="#">Nous joindre</a>
   </nav>
