--- a/src/scripts/pages/home/presentation-reservation-form/presentation-reservation-form.less
+++ b/src/scripts/pages/home/presentation-reservation-form/presentation-reservation-form.less
@@ -60,9 +60,68 @@
     &.response {
       margin-top: 15px;
     }
+  }
 
-    &.success {
+  .success-response {
+    color: @white;
+
+    h2 {
+      margin: 20px 0 15px;
+      font-size: 13pt;
+      line-height: 1;
+    }
+
+    svg {
+      fill: @white;
+    }
+
+    .follow-up-header {
+      margin-bottom: 60px;
+    }
+
+    .follow-up-subheading {
+      font-size: 10pt;
+      line-height: 1;
+      margin: 0;
+      padding: 0;
+    }
+
+    .follow-up-column {
+      display: inline-block;
+      width: 50%;
+    }
+
+    .follow-up-icon {
+      &.icon-letter-sent svg {
+        width: 78px;
+        height: 29px;
+      }
+      &.icon-phone svg {
+        width: 40px;
+        height: 40px;
+        margin-bottom: 15px;
+      }
+      &.icon-letter svg {
+        width: 45px;
+        height: 40px;
+        vertical-align: bottom;
+        margin-bottom: 15px;
+      }
+    }
+
+    .follow-up-link {
+      padding: 0;
+      margin: 0;
       color: @white;
+      font-size: 13pt;
+      font-weight: @fwBold;
+      text-decoration: none;
+      text-transform: uppercase;
+      line-height: 1;
+
+      &:hover {
+        text-decoration: underline;
+      }
     }
   }
 }
