Added "Nous joindre" page (#28)

--- a/src/scripts/components/footer/footer-template.html
+++ b/src/scripts/components/footer/footer-template.html
@@ -62,6 +62,7 @@
             <a class="footer-link" href="#">Carrières</a>
           </li>
         </ul>
+        <div class="list-header"><a class="footer-link" href="/nous-joindre">Nous joindre</a></div>
       </div>
     </div>
 
