--- a/src/scripts/components/menu/menu-template.html
+++ b/src/scripts/components/menu/menu-template.html
@@ -10,7 +10,7 @@
     <a class="main-menu-item" href="/regions-disponibles">Régions disponibles</a>
     <a class="main-menu-item" href="#">Nos forfaits</a>
     <a class="main-menu-item" href="#">Corporatif</a>
-    <a class="main-menu-item" href="#">Nous joindre</a>
+    <a class="main-menu-item" href="/nous-joindre">Nous joindre</a>
   </nav>
   <div class="separator"></div>
 </div>
