--- a/src/styles/megapode.less
+++ b/src/styles/megapode.less
@@ -70,15 +70,17 @@ section {
 label {
   display: block;
   font-size: 11pt;
+  margin-bottom: 5px;
 }
 
 input[type=text],
 input[type=email],
-input[type=tel] {
+input[type=tel],
+textarea {
   display: block;
-  border: 1px solid @black;
+  margin-bottom: 15px;
+  border: 1px solid @middleGrey;
   padding: 5px;
-  margin-bottom: 20px;
   font-size: 10pt;
 }
 
