--- a/src/styles/site/home-page.less
+++ b/src/styles/site/home-page.less
@@ -77,7 +77,7 @@
       margin-top: -40px;
       .text-content {
         margin-left: 190px;
-        margin-top: 80px;
+        margin-top: 70px;
       }
     }
     .feature-icons {
@@ -120,11 +120,12 @@
       }
       .framed {
         border: 1px solid @middleGrey;
-        padding: 15px 25px 45px;
+        padding: 15px 25px 25px;
         width: 280px;
       }
-      .market-selling-points {
-        min-height: 350px;
+      .market-selling-point {
+        min-height: 150px;
+        margin-bottom: 20px;
       }
       .market-icon {
         display: block;
@@ -148,6 +149,7 @@
       }
     }
     .discover-cta {
+      margin-top: 15px;
       &:after {
         margin-left: 29px;
       }
