Improved SVG accessibility

--- a/src/styles/site/bonjour-page.less
+++ b/src/styles/site/bonjour-page.less
@@ -35,6 +35,7 @@
         width: 12px;
         height: 12px;
         margin-left: 10px;
+        fill: @black;
       }
       .leader-title {
         font-size: 8pt;
