Removed links to "Corporatif" page for now

--- a/src/scripts/components/footer/footer-template.html
+++ b/src/scripts/components/footer/footer-template.html
@@ -42,7 +42,7 @@
         </ul>
       </div>
       <div class="footer-column">
-        <div class="list-header">Nos forfaits</div>
+        <div class="list-header"><a class="footer-link" href="#">Nos forfaits</a></div>
         <ul class="list">
           <li>
             <a class="footer-link" href="#">Courtiers</a>
@@ -56,12 +56,6 @@
         </ul>
       </div>
       <div class="footer-column">
-        <div class="list-header">Corporatif</div>
-        <ul class="list">
-          <li>
-            <a class="footer-link" href="#">Carrières</a>
-          </li>
-        </ul>
         <div class="list-header"><a class="footer-link" href="/nous-joindre">Nous joindre</a></div>
       </div>
     </div>
