--- a/src/scripts/components/header/header-template.html
+++ b/src/scripts/components/header/header-template.html
@@ -12,7 +12,13 @@
         </a>
       </div>
       <div class="button-wrapper">
-        <button type="button" class="button" ng-click="vm.requestMenu()">
+        <button
+          id="mainMenuButton"
+          type="button"
+          class="button"
+          ng-click="vm.requestMenu()"
+          aria-label="Menu - Ouvre le menu de navigation du site web"
+        >
           <span class="button-label menu">Menu</span>
         </button>
       </div>
