Change href to ‘/nos-forfaits’ (#46)

--- a/src/scripts/components/menu/menu-template.html
+++ b/src/scripts/components/menu/menu-template.html
@@ -26,7 +26,7 @@
     >Régions disponibles</a>
     <a
       class="main-menu-item"
-      href="#"
+      href="/nos-forfaits"
       tabindex="{{vm.getTabIndex()}}"
     >Nos forfaits</a>
     <a
