Added Commandez button to header (#54)

--- a/src/scripts/components/header/header-template.html
+++ b/src/scripts/components/header/header-template.html
@@ -7,6 +7,11 @@
 
     <nav id="utilNav" class="header-nav util-nav">
       <div class="button-wrapper">
+        <a class="button" href="https://plan.megapode.ca/account/orders/create">
+          <span class="button-label members">Commandez votre plan Megapode</span>
+        </a>
+      </div>
+      <div class="button-wrapper">
         <a class="button" href="https://plan.megapode.ca/login">
           <span class="button-label members">Membres</span>
         </a>
