Updated layout because of new text size impact (#51)

--- a/src/styles/site/home-page.less
+++ b/src/styles/site/home-page.less
@@ -124,8 +124,13 @@
         width: 280px;
       }
       .market-selling-point {
-        min-height: 150px;
+        min-height: 210px;
         margin-bottom: 20px;
+        p {
+          &.subheading {
+            text-align: center;
+          }
+        }
       }
       .market-icon {
         display: block;
