--- a/src/scripts/pages/home/banner/home-banner.less
+++ b/src/scripts/pages/home/banner/home-banner.less
@@ -7,6 +7,7 @@
 
   .banner-display {
     position: absolute;
+    top: 30px;
     width: 100%;
     height: 100%;
     background-image: url('@{imagesDir}/home-banner-ipad.jpg');
@@ -42,26 +43,37 @@
 
   .download-cta-container {
     position: relative;
-    left: 4px;
-    top: -6px;
+    left: 0px;
+    top: 0px;
+  }
+  
+  .download-cta {
+    width:300px;
+    margin:auto;
+  }
+  
+  .search-prompt {
+    position:absolute;
+    z-index:100;
+    width:100%;
+    height:200px;
+    top:150px;
   }
 
-  .selling-points {
-    position: relative;
-    top: 475px;
-    margin: 0 auto;
-    font-family: @ffSerif;
-    font-size: 16pt;
-    text-align: center;
-    text-transform: uppercase;
-    line-height: 1.5;
+  .plan-cta h2, h1 {
+    text-align:center;
   }
+  
+  .plan-cta {
+    border:0;
+    margin:auto;
+  }
+
 
   .megapode-head {
     position: relative;
-    top: 505px;
+    top: 350px;
     margin: 0 auto;
-    width: 68px;
-    height: 61px;
+    width: 220px;
   }
 }
