Revert "updated link to page /nos-forfaits"
This reverts commit dfe3e818c9939185f0b751d84c3f6a0e00b5ddaa.

--- a/src/scripts/components/footer/footer-template.html
+++ b/src/scripts/components/footer/footer-template.html
@@ -42,7 +42,7 @@
         </ul>
       </div>
       <div class="footer-column">
-        <div class="list-header"><a class="footer-link" href="/nos-forfaits">Nos forfaits</a></div>
+        <div class="list-header"><a class="footer-link" href="#">Nos forfaits</a></div>
         <ul class="list">
           <li>
             <a class="footer-link" href="#">Courtiers</a>
