--- a/src/styles/common/variables.less
+++ b/src/styles/common/variables.less
@@ -18,4 +18,9 @@
 @fwBold: 700;
 @fwExtraBold: 800;
 
+@phone: 519px;
+@tablet: 768px;
+@desktop: 960px;
+@largeDesktop: 1080px;
+
 @imagesDir: '/wp-content/themes/megapode-website-w17/static/images';
