Restructured download-cta component (#70)

--- a/src/scripts/pages/home/banner/home-banner.less
+++ b/src/scripts/pages/home/banner/home-banner.less
@@ -53,38 +53,38 @@
   }
   
   .search-iframe {
+    position: relative;
+    top: 100px;
     margin: 20px auto;
     width: 720px;
     height: 100px;
     padding: 30px;
-    position: relative;
-    top: 100px;
     z-index: 2;
     background-color: rgba(250,250,250,0.9);
     border: 1px solid #e8e8e8;
 
-      .search-instructions {
-        padding: 0 0 15px 0;
-        text-align: center;
-        text-transform: uppercase;
-      }
-
-      iframe {
-        border: 0px;
-        width: 420px;
-        z-index: 3;
-        display: block;
-        margin: auto
-      }
+    .search-instructions {
+      padding: 0 0 15px 0;
+      text-align: center;
+      text-transform: uppercase;
     }
 
-  .plan-cta h2, h1 {
-    text-align: center;
+    iframe {
+      display: block;
+      z-index: 3;
+      width: 420px;
+      border: 0px;
+      margin: auto
+    }
   }
-  
+
   .plan-cta {
     border: 0;
     margin: auto;
+
+    h2, h1 {
+      text-align: center;
+    }
   }
 
   .megapode-head {
